Learn More & Add to cart buttons spaced out + Buttons styled correctly + page spacing seems right

--- a/styles.CSS
+++ b/styles.CSS
@@ -12,7 +12,7 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: white;
 }
-h1{
+h1 {
     font-weight: 600;
     font-size: large;
 }
@@ -33,7 +33,6 @@ header {
     position: relative;
     display: flex;
     justify-content: space-evenly;
-    height: 63px;
     padding: 5px;
     align-items: flex-end;
 }
@@ -43,12 +42,15 @@ h2 img {
     width: 50px;
     margin-left: 0px;
     margin-right: 0px;
+
 }
 
-.logo h2 {
+.header_logo h2 {
     font-weight: bold;
-
 }
+    
+
+
 nav li {
     list-style-type: none;
     display: inline;
@@ -216,15 +218,16 @@ input {
     margin-left: 345px;
     background-color: #bf7631;
     border: none;
-    
+    text-decoration: none;
 }
 .send_message_button {
     background-color: #bf7631;
     color: white;
     border: none;
-    margin-bottom: 5px;
     text-decoration: none;
     font-size: 10px;
+    margin: 10px 0px;
+    padding: 5px 3px;
 }
 
 /* /* FOOTER * */
@@ -281,15 +284,15 @@ footer {
     margin-bottom: 10px;
 }
 
-.logo_image{
+.logo_image {
     width:50px;
     height:50px;
 }
-.left_logo_footer{
+.left_logo_footer {
     padding-left:50px;
 }
 
-.right_logo_footer{
+.right_logo_footer {
     margin-right: 50px;
 }
 
